Updates to make it *sveltier*

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Demo - Svelte &times; D3.js</title>
+	<meta name='description' content='Bla bla bla' />
+	<meta name='keywords' content='svelte,d3,datavisualization' />
+
+	<meta property='og:type' content='website'>
+	<meta property='twitter:card' content='summary_large_image'>
+	<meta property='og:title' content='Demo - Svelte &times; D3.js'>
+	<meta property='twitter:title' content='Demo - Svelte &times; D3.js'>
+	<meta property='og:url' content='https://tomfevrier.io/demo-svelte-d3'>
+	<meta property='twitter:url' content='https://tomfevrier.io/demo-svelte-d3'>
+	<meta property='og:description' content='Bla bla bla'>
+	<meta property='twitter:description' content='Bla bla bla'>
+	<meta property='og:image' content='./thumbnail.png'>
+	<meta property='twitter:image' content='./thumbnail.png'>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
